--- a/Pages/Family/Profile/Index.cshtml
+++ b/Pages/Family/Profile/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model AgapayAidSystem.Pages.Family.Profile.IndexModel
 @{
+	ViewData["Title"] = "Family Profile";
 }
 
 <div class="container p-2 form-container">
@@ -8,7 +9,7 @@
 
 		<div class="row pt-4">
 			<div class="col text-center">
-				<h1>Family Profile<h1>
+				<h1>Family Profile</h1>
 			</div>
 		</div>
 
