--- a/Pages/Family/Add/Member.cshtml
+++ b/Pages/Family/Add/Member.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Family.EditFamilyMemberModel
+@model AgapayAidSystem.Pages.Family.Add.MemberModel
 @{
-	ViewData["Title"] = "Edit Family Member";
+	ViewData["Title"] = "Add Family Member";
 }
 
 <style>
@@ -30,89 +30,61 @@
 	}
 </style>
 
-
-@if (!string.IsNullOrEmpty(Model.errorMessage))
-{
-	<div class="alert alert-warning alert-dismissible fade show" role="alert">
-		<strong>@Model.errorMessage</strong>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-	</div>
-}
-
 <div class="container p-2 form-container">
 
 	<div class="container mt-4" id="disaster-form-container">
 
 		<div class="row pt-4">
 			<div class="col text-center">
-				<h1>Edit Family Member</h1>
+				<h1>Add Family Member</h1>
 			</div>
 		</div>
 
 		<div class="row pt-4">
 			<form method="POST">
-				<div class="row mb-3">
+				<div class="row">
 					<p class="text-danger text-end">* Required field</p>
 				</div>
 				<div class="row">
-					<!-- Family ID-->
+					@*<!-- Family ID-->
 					<div class="col-md-3">
-						<div class="mb-3">
-							<label class="form-label">
-								Family ID:
-								<span class="text-danger" style="padding: 5px">*</span>
-							</label>
-							<input type="text" class="form-control" name="familyID" value="@Model.familyInfo.familyID" required maxlength="65" />
-						</div>
+					<div class="mb-3">
+					<label class="form-label">
+					Family ID:
+					<span class="text-danger" style="padding: 5px">*</span>
+					</label>
+					<input type="text" class="form-control" name="familyID" value="@Model.familyInfo.familyID" required maxlength="65" />
+					</div>
 					</div>
 
 					<!-- Member ID -->
 					<div class="col-md-3">
-						<div class="mb-3">
-							<label class="form-label">
-								Member ID:
-								<span class="text-danger" style="padding: 5px">*</span>
-							</label>
-							<input type="text" class="form-control" name="memberID" value="@Model.addfamilymemberInfo.memberID" required maxlength="85" />
-						</div>
+					<div class="mb-3">
+					<label class="form-label">
+					Member ID:
+					<span class="text-danger" style="padding: 5px">*</span>
+					</label>
+					<input type="text" class="form-control" name="memberID" value="@Model.addfamilymemberInfo.memberID" required maxlength="85" />
+					</div>
 					</div>
 
 					<!--Serial No. -->
 					<div class="col-md-3">
-						<div class="mb-3">
-							<label class="form-label">
-								Serial No.:
-								<span class="text-danger" style="padding: 5px">*</span>
-							</label>
-							<input type="text" class="form-control" name="serialNum" value="@Model.familyInfo.serialNum" required maxlength="85" />
-						</div>
+					<div class="mb-3">
+					<label class="form-label">
+					Serial No.:
+					<span class="text-danger" style="padding: 5px">*</span>
+					</label>
+					<input type="text" class="form-control" name="serialNum" value="@Model.familyInfo.serialNum" required maxlength="85" />
 					</div>
+					</div>*@
 
 					<!-- Relationship -->
 					<div class="col-md-3">
 						<div class="mb-3">
 							<label class="form-label">
 								Relationship:
-								<span class="text-danger" style="padding: 5px">*</span>
 							</label>
-							<div class="form-check">
-								<input class="form-check-input" type="radio" name="relationship" id="familyHead" value="Family Head" @if (Model.addfamilymemberInfo.relationship == "Family Head")
-								{
-									<text>checked</text>
-								}>
-								<label class="form-check-label" for="familyHead">
-									Family Head
-								</label>
-							</div>
-							<div class="form-check">
-								<input class="form-check-input" type="radio" name="relationship" id="familyMember" value="Family Member" @if (Model.addfamilymemberInfo.relationship == "Family Member")
-								{
-									<text>checked</text>
-								}>
-								<label class="form-check-label" for="familyMember">
-									Family Member
-								</label>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -196,54 +168,26 @@
 						<div class="mb-3">
 							<label class="form-label">
 								Birthdate:
+								<span class="text-danger" style="padding: 5px">*</span>
 							</label>
 							<input type="date" class="form-control text-muted" name="birthdate" value="@Model.addfamilymemberInfo.birthdate" required pattern="\d{4}-\d{2}-\d{2}">
 						</div>
 					</div>
 
-					<!-- Civil Status -->
+					<!-- Evacuation Center Type -->
 					<div class="col-md-3">
 						<div class="mb-3">
-							<label class="form-label radioAlign">
+							<label class="form-label">
 								Civil Status:
 								<span class="text-danger" style="padding: 5px">*</span>
 							</label>
-							<div class="form-check radioAlign">
-								<input class="form-check-input" type="radio" name="civilStatus" id="single" value="Single" @if (Model.addfamilymemberInfo.civilStatus == "Single")
-								{
-									<text>checked</text>
-								}>
-								<label class="form-check-label" for="single">
-									Single
-								</label>
-							</div>
-							<div class="form-check radioAlign">
-								<input class="form-check-input" type="radio" name="civilStatus" id="married" value="Married" @if (Model.addfamilymemberInfo.civilStatus == "Married")
-								{
-									<text>checked</text>
-								}>
-								<label class="form-check-label" for="married">
-									Married
-								</label>
-							</div>
-							<div class="form-check radioAlign">
-								<input class="form-check-input" type="radio" name="civilStatus" id="widowed" value="Widowed" @if (Model.addfamilymemberInfo.civilStatus == "Widowed")
-								{
-									<text>checked</text>
-								}>
-								<label class="form-check-label" for="widowed">
-									Widowed
-								</label>
-							</div>
-							<div class="form-check radioAlign">
-								<input class="form-check-input" type="radio" name="civilStatus" id="annulled" value="Annulled" @if (Model.addfamilymemberInfo.civilStatus == "Annulled")
-								{
-									<text>checked</text>
-								}>
-								<label class="form-check-label" for="annulled">
-									Annulled
-								</label>
-							</div>
+							<select class="form-select" name="centerType" required>
+								<option value="" selected disabled>Select Civil Status</option>
+								<option value="Single">Single</option>
+								<option value="Married">Married</option>
+								<option value="Widowed">Widowed</option>
+								<option value="Annulled">Annulled</option>
+							</select>
 						</div>
 					</div>
 
@@ -252,6 +196,7 @@
 						<div class="mb-3">
 							<label class="form-label">
 								Religion:
+								<span class="text-danger" style="padding: 5px">*</span>
 							</label>
 							<input type="text" class="form-control" name="extName" value="@Model.addfamilymemberInfo.religion" maxlength="45" />
 						</div>
@@ -309,45 +254,15 @@
 						<label class="form-label">
 							Remarks:
 						</label>
-						<textarea class="form-control" name="description" value="@Model.addfamilymemberInfo.remarks" rows="4" required></textarea>
+						<textarea class="form-control" name="description" value="@Model.addfamilymemberInfo.remarks" rows="3" required></textarea>
 					</div>
 				</div>
 			</form>
 		</div>
 		<!-- Cancel and Save Button -->
 		<div class="button-spacer">
-			<a class="btn btn-outline-secondary mr-10" href="/Family/AddFamily" role="button">Cancel</a>
+			<a class="btn btn-outline-secondary mr-10" href="/family/index" role="button">Cancel</a>
 			<button type="button" class="btn btn-primary" id="submitBtn" onclick="confirmSave()">Save</button>
 		</div>
 	</div>
 </div>
-
-
-<script>
-	const submitButton = document.getElementById('submitBtn');
-	const form = document.querySelector('form');
-
-	// Disable the submit button by default
-	submitButton.disabled = true;
-
-	// Function to check form validity and enable/disable the submit button
-	function checkFormValidity() {
-		if (form.checkValidity()) {
-			submitButton.disabled = false;
-		} else {
-			submitButton.disabled = true;
-		}
-	}
-
-	// Add an event listener for the input event on form elements
-	form.addEventListener('input', checkFormValidity);
-
-	// Function to show the confirmation dialog
-	function confirmSave() {
-		const confirmation = confirm("Are you sure you want to save the changes?");
-		if (confirmation) {
-			// If the user confirms, submit the form
-			form.submit();
-		}
-	}
-</script>
