Moved pages to folders under Disaster/Profile

--- a/Pages/disaster/profile/staffassignment/Add.cshtml
+++ b/Pages/disaster/profile/staffassignment/Add.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Disaster.Profile.AssignStaffModel
+@model AgapayAidSystem.Pages.disaster.profile.staffassignment.AddModel
 @{
 	ViewData["Title"] = "Assign Staff";
 	Layout = "_DisasterProfile";
@@ -66,7 +66,7 @@
 
                     <!-- Cancel and Save Button -->
                     <div class="button-spacer">
-                        <a class="btn btn-outline-secondary mr-10" href="/disaster/profile/staffassignment">Cancel</a>
+                        <a class="btn btn-outline-secondary mr-10" href="/disaster/profile/staffassignment/index">Cancel</a>
                         <button type="submit" class="btn btn-primary" name="saveSelection">Save Selection</button>
                     </div>
                 </div>
