--- a/Pages/Shared/_DisasterProfile.cshtml
+++ b/Pages/Shared/_DisasterProfile.cshtml
@@ -72,19 +72,19 @@
                 <div class="position-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/entrylog">Entry Log</a>
+                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/entrylog/index">Entry Log</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/staffassignment">Staff Assignment</a>
+                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/staffassignment/index">Staff Assignment</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/reliefgoodspack">Relief Goods Pack</a>
+                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/reliefgoodspack/index">Relief Goods Pack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/reliefdistribution">Relief Distribution</a>
+                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/reliefdistribution/index">Relief Distribution</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/vulnerabilityassessments">Vulnerability Assessments</a>
+                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/vulnerabilityassessment/index">Vulnerability Assessment</a>
                         </li>
                     </ul>
                 </div>
@@ -100,11 +100,11 @@
             <!-- Sidebar (mobile) -->
             <div id="sidebarMobile" class="col-md-3 col-lg-2 d-md-none bg-light p-2">
                 <select class="form-select">
-                    <option value="/disaster/profile/entrylog">Entry Log</option>
-                    <option value="/disaster/profile/staffassignment">Staff Assignment</option>
-                    <option value="/disaster/profile/reliefgoodspack">Relief Goods Pack</option>
-                    <option value="/disaster/profile/reliefdistribution">Relief Distribution</option>
-                    <option value="/disaster/profile/vulnerabilityassessments">Vulnerability Assessments</option>
+                    <option value="/disaster/profile/entrylog/index">Entry Log</option>
+                    <option value="/disaster/profile/staffassignment/index">Staff Assignment</option>
+                    <option value="/disaster/profile/reliefgoodspack/index">Relief Goods Pack</option>
+                    <option value="/disaster/profile/reliefdistribution/index">Relief Distribution</option>
+                    <option value="/disaster/profile/vulnerabilityassessment/index">Vulnerability Assessment</option>
                 </select>
             </div>
 
