--- a/Pages/disaster/profile/entrylog/CheckIn.cshtml
+++ b/Pages/disaster/profile/entrylog/CheckIn.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Disaster.Profile.CheckInEvacueeModel
+@model AgapayAidSystem.Pages.disaster.profile.entrylog.CheckInModel
 @{
-	ViewData["Title"] = "Check In Evacuee";
+	ViewData["Title"] = "Check-In Evacuee";
 }
 
 <div class="container p-2 form-container">
@@ -58,7 +58,7 @@
 
                     <!-- Cancel and Save Button -->
                     <div class="button-spacer">
-                        <a class="btn btn-outline-secondary mr-10" href="/disaster/profile/entrylog">Cancel</a>
+                        <a class="btn btn-outline-secondary mr-10" href="/disaster/profile/entrylog/index">Cancel</a>
                         <button type="submit" class="btn btn-primary" name="saveSelection">Save Selection</button>
                     </div>
                 </div>
