--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -1,8 +1,16 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Disaster.Profile.StaffAssignmentModel
+@model AgapayAidSystem.Pages.disaster.profile.entrylog.IndexModel
 @{
+	ViewData["Title"] = "Entry Log";
 	Layout = "_DisasterProfile";
-	ViewData["Title"] = "Staff Assignment";
+}
+
+@if (!string.IsNullOrEmpty(Model.errorMessage))
+{
+	<div class="alert alert-warning alert-dismissible fade show" role="alert">
+		<strong>@Model.errorMessage</strong>
+		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	</div>
 }
 
 <div class="container p-2">
@@ -23,13 +31,17 @@
 		</ul>
 
 		<div class="col d-flex align-items-center">
-			<h1>Staff Assignment</h1>
+			<h1>Entry Log</h1>
 		</div>
 
-		<div class="col-auto d-flex justify-content-between align-items-center">
-			<a class="btn btn-primary mb-2" href="/disaster/assignstaff">
-				<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> AssignStaff
+		<div class="col-auto d-flex justify-content-between align-items-center" style="gap: 5px">
+			<a class="btn btn-primary mb-2" href="/disaster/profile/entrylog/checkin">
+				<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Check In Evacuee
 			</a>
+
+			<button type="button" class="btn btn-primary mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
+				Check Out Evacuees
+			</button>
 		</div>
 	</div>
 
@@ -37,29 +49,38 @@
 		<table class="table align-middle table-hover" style="width:100%">
 			<thead>
 				<tr>
+					<th>     </th>
 					<th>ID</th>
 					<th>Name</th>
-					<th>Mobile No.</th>
-					<th>Role</th>
-					<th>Date</th>
+					<th>Check-in Date</th>
+					<th>Check-out Date</th>
+					<th>Status</th>
 					<th>      </th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr class="data-row clickable-row">
-					<td width="15%">ECS0000001</td>
+					<td>
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox">
+							<label class="form-check-label"></label>
+						</div>
+					</td>
+					<td width="15%">EVC0000001</td>
 					<td width="30%">Juanito Santos</td>
-					<td width="15%">0912-345-6789</td>
-					<td width="15%">EC Manager</td>
-					<td width="15%">08/20/2023</td>
+					<td width="15%">08/21/2023</td>
+					<td width="15%">08/30/2023</td>
+					<td width="15%">
+						<span class="badge bg-success">Active</span>
+					</td>
 					<td width="10%">
 						<div class="d-inline position-relative">
 							<a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
 								<i class="bi bi-three-dots-vertical"></i>
 							</a>
 							<ul class="dropdown-menu" aria-labelledby="recordOptions">
-								<li><a class="dropdown-item" href="#">View Staff Profile</a></li>
-								<li><a class="dropdown-item" href="#" onclick="confirmDelete();">Delete</a></li>
+								<li><a class="dropdown-item" href="#">View Family Profile</a></li>
+								<li><a class="dropdown-item" href="#" onclick="confirmDelete();">Delete Entry Log</a></li>
 							</ul>
 						</div>
 					</td>
@@ -78,7 +99,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				Are you sure you want to delete this staff assignment record?
+				Are you sure you want to delete this entry log?
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
