--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -18,7 +18,7 @@
 	<!-- Search Bar -->
 	<form id="search-form" class="pb-5">
 		<div class="input-group">
-			<input type="search" class="form-control ds-input" id="search-bar" placeholder="Search here..." aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
+			<input type="search" class="form-control ds-input" id="search-bar" placeholder="Search Evacuee" aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
 			<button type="submit" class="btn btn-primary" id="search-button"><i class="bi bi-search"></i></button>
 		</div>
 	</form>
