--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -111,11 +111,11 @@
         <div class="info-item">
             <i class="bi bi-person-circle"></i>
             <div class="text">
-                <h3>2000</h3>
-                <p>Total Check-in Evacuees</p>
+                <h3>@Model.GetTotalEvacueesCount()</h3>
+                <p><b>Total Evacuees</b></p>
                 <div class="box-stat">
-                    <small>Male: <span>100</span></small>
-                    <small>Female: <span>100</span></small>
+                    <small>Check-in: <span>@Model.GetTotalCheckInCount()</span></small>
+                    <small>Check-out: <span>@Model.GetTotalCheckOutCount()</span></small>
                 </div>
             </div>
         </div>
@@ -124,9 +124,10 @@
             <i class="bi bi-box-seam-fill"></i>
             <div class="text">
                 <h3>300</h3>
-                <p>Total Distributed Relief Goods</p>
+                <p>Total Affected Barangays</p>
                 <div class="box-stat">
-                    <small>Relief Pack Left: <span>100</span></small>
+                    <small>Families: <span>100</span></small>
+                    <small>Persons: <span>100</span></small>
                 </div>
             </div>
         </div>  
@@ -135,9 +136,10 @@
             <i class="bi bi-people"></i>
             <div class="text">
                 <h3>4</h3>
-                <p>Total Active Evacuation Center</p>
+                <p>Total Evacuation Centers</p>
                 <div class="box-stat">
-                    <small>Assigned EC Staff: <span>100</span></small>
+                    <small>Open: <span>100</span></small>
+                    <small>Closed: <span>100</span></small>
                 </div>
             </div>
         </div>
@@ -149,7 +151,7 @@
         <h1>Evacuation Center Log</h1>
 
         <div class="d-flex justify-content-end align-items-center">
-            <a class="btn btn-primary mb-2" href="/disaster/profile/allocateeC?disasterID=@Model.disasterInfo.disasterID">
+            <a class="btn btn-primary mb-2" href="/disaster/profile/allocateec?disasterID=@Model.disasterInfo.disasterID">
                 <i class="bi bi-building-add"></i>Allocate Evacuation Center
             </a>
         </div>
@@ -163,6 +165,7 @@
 					<th>Evacuation Center Name</th>
                     <th>Barangay</th>
 					<th>Occupancy</th>
+                    <th>Assigned Staff</th>
 					<th>Opening Date</th>
 					<th>Closing Date</th>
 				</tr>
@@ -171,17 +174,18 @@
                 @{ var counter = 1; }
                 @if (Model.listCenterLog.Count == 0) {
                     <tr>
-                        <td class="text-center" colspan="6">No allocated evacuation center</td>
+                        <td class="text-center" colspan="6">There are no evacuation centers allocated to this disaster.</td>
                     </tr>
                 } else {   
                     @foreach (var item in Model.listCenterLog) {
                         <tr data-id="@item.centerLogID" class="data-row clickable-row">
                             <td width="5%">@counter</td>
-                            <td width="25%">@item.centerName</td>
-                            <td width="20%">@item.barangayName</td>
-                            <td width="10%">@item.occupancy/@item.maxCapacity</td>
-                            <td width="20%">@item.openingDateTime</td>
-                            <td width="20%">@item.closingDateTime</td>
+                            <td width="20%">@item.centerName</td>
+                            <td width="15%">@item.barangayName</td>
+                            <td width="15%">@item.occupancy/@item.maxCapacity</td>
+                            <td width="15%">@item.totalStaff</td>
+                            <td width="15%">@item.openingDateTime</td>
+                            <td width="15%">@item.closingDateTime</td>
                         </tr>
                         counter++;
                     }
