--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -109,7 +109,7 @@
 
     <div class="box-info">
         <div class="info-item">
-            <i class="bi bi-person-circle"></i>
+            <i class="bi bi-people"></i>
             <div class="text">
                 <h3>@Model.GetTotalEvacueesCount()</h3>
                 <p><b>Total Evacuees</b></p>
@@ -124,7 +124,7 @@
             <i class="bi bi-box-seam-fill"></i>
             <div class="text">
                 <h3>300</h3>
-                <p>Total Affected Barangays</p>
+                <p><b>Total Affected Barangays</b></p>
                 <div class="box-stat">
                     <small>Families: <span>100</span></small>
                     <small>Persons: <span>100</span></small>
@@ -136,7 +136,7 @@
             <i class="bi bi-people"></i>
             <div class="text">
                 <h3>4</h3>
-                <p>Total Evacuation Centers</p>
+                <p><b>Total Evacuation Centers</b></p>
                 <div class="box-stat">
                     <small>Open: <span>100</span></small>
                     <small>Closed: <span>100</span></small>
