--- a/Pages/Shared/_DisasterProfile.cshtml
+++ b/Pages/Shared/_DisasterProfile.cshtml
@@ -72,6 +72,9 @@
                 <div class="position-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-page="/disaster/profile/informationboard">Information Board</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/disaster/profile/entrylog/index">Entry Log</a>
                         </li>
                         <li class="nav-item">
@@ -100,6 +103,7 @@
             <!-- Sidebar (mobile) -->
             <div id="sidebarMobile" class="col-md-3 col-lg-2 d-md-none bg-light p-2">
                 <select class="form-select">
+                    <option value="/disaster/profile/informationboard">Information Board</option>
                     <option value="/disaster/profile/entrylog/index">Entry Log</option>
                     <option value="/disaster/profile/staffassignment/index">Staff Assignment</option>
                     <option value="/disaster/profile/reliefgoodspack/index">Relief Goods Pack</option>
