--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -46,6 +46,16 @@
 }
 
 <div class="container p-2">
+	<div class="row">
+		<ul class="breadcrumbs">
+			<li><a href="/disaster/index">Disaster</a></li>
+			<li class="divider">/</li>
+			<li><a href="#">Typhoon Pedro</a></li>
+			<li class="divider">/</li>
+			<li><a href="#" class="active">Insert Evacuation Center</a></li>
+		</ul>
+	</div>
+
 	<!-- Search Bar -->
 	<form id="search-form" class="pb-5">
 		<div class="input-group">
@@ -55,14 +65,6 @@
 	</form>
 
 	<div class="row">
-		<ul class="breadcrumbs">
-			<li><a href="#">Disaster</a></li>
-			<li class="divider">/</li>
-			<li><a href="#">Typhoon Pedro</a></li>
-			<li class="divider">/</li>
-			<li><a href="#" class="active">Insert Evacuation Center</a></li>
-		</ul>
-
 		<div class="col d-flex align-items-center">
 			<h1>Entry Log</h1>
 		</div>
