--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -111,7 +111,7 @@
         <div class="info-item">
             <i class="bi bi-people"></i>
             <div class="text">
-                <h3>@Model.GetTotalEvacueesCount()</h3>
+                <h3>@Model.GetTotalDistinctEvacueesCount()</h3>
                 <p><b>Total Evacuees</b></p>
                 <div class="box-stat">
                     <small>Check-in: <span>@Model.GetTotalCheckInCount()</span></small>
@@ -123,12 +123,12 @@
         <div class="info-item">
             <i class="bi bi-box-seam-fill"></i>
             <div class="text">
-                <h3>300</h3>
+                <h3>@Model.GetTotalDistinctBarangaysCount()</h3>
                 <p><b>Total Affected Barangays</b></p>
                 <div class="box-stat">
-                    <small>Families: <span>100</span></small>
-                    <small>Male: <span>100</span></small>
-                    <small>Female: <span>100</span></small>
+                    <small>Families: <span>@Model.GetTotalDistinctFamiliesCount()</span></small>
+                    <small>Male: <span>@Model.GetTotalDistinctFemaleCount()</span></small>
+                    <small>Female: <span>@Model.GetTotalDistinctMaleCount()</span></small>
                 </div>
             </div>
         </div>  
@@ -159,13 +159,13 @@
     </div>
 
 	<div class="table-responsive">
-        <table class="table align-middle table-hover" id="eclog-table" style="width:100%">
+        <table class="table align-middle table-hover" id="eclog-table" style="width:100%; text-align: center;">
 			<thead>
 				<tr>
 					<th>#</th>
-					<th>Evacuation Center Name</th>
-                    <th>Barangay</th>
-					<th>Occupancy</th>
+                    <th style="text-align: left;">Evacuation Center Name</th>
+                    <th style="text-align: left;">Barangay</th>
+                    <th>Occupancy</th>
                     <th>Assigned Staff</th>
 					<th>Opening Date</th>
 					<th>Closing Date</th>
@@ -175,14 +175,14 @@
                 @{ var counter = 1; }
                 @if (Model.listCenterLog.Count == 0) {
                     <tr>
-                        <td class="text-center" colspan="6">There are no evacuation centers allocated to this disaster.</td>
+                        <td class="text-center" colspan="7">There are no evacuation centers allocated to this disaster.</td>
                     </tr>
                 } else {   
                     @foreach (var item in Model.listCenterLog) {
                         <tr data-id="@item.centerLogID" class="data-row clickable-row">
                             <td width="5%">@counter</td>
-                            <td width="20%">@item.centerName</td>
-                            <td width="15%">@item.barangayName</td>
+                            <td width="20%" style="text-align: left;">@item.centerName</td>
+                            <td width="15%" style="text-align: left;">@item.barangayName</td>
                             <td width="15%">@item.occupancy/@item.maxCapacity</td>
                             <td width="15%">@item.totalStaff</td>
                             <td width="15%">@item.openingDateTime</td>
