--- a/Pages/EvacuationCenter/Delete.cshtml
+++ b/Pages/EvacuationCenter/Delete.cshtml
@@ -32,7 +32,7 @@
                     if (rowsAffected > 0)
                     {
                         // Evacuation center deleted successfully
-                        successMessage = "Evacuation center deleted successfully";
+                        successMessage = "Evacuation center deleted successfully!";
                     }
                     else
                     {
@@ -54,5 +54,5 @@
     }
 
     // Redirect to the EvacuationCenter/Index page after deleting or encountering an error
-    Response.Redirect("/EvacuationCenter/Index?errorMessage=" + errorMessage + "&successMessage=" + successMessage);
+    Response.Redirect("/evacuationcenter/index?errorMessage=" + errorMessage + "&successMessage=" + successMessage);
 }
